# PRG32

./: .gitignore  AGENTS.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  partitions_prg32.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c6_128k  sdkconfig.defaults.metrics  sdkconfig.defaults.p4  sdkconfig.defaults.qemu  sdkconfig.old
components/prg32/: CMakeLists.txt  Kconfig  idf_component.yml  prg32_abi_exports.c  prg32_abi_table.c  prg32_audio.c  prg32_bands.c  prg32_cart.c  prg32_console.c  prg32_controller.c  prg32_device_demo.c  prg32_display_ili9341.c  prg32_display_qemu_rgb.c  prg32_gfx_sync.c  prg32_http_games.c  prg32_http_scores.c  prg32_input.c  prg32_keyboard.c  prg32_led.c  prg32_metrics.c  prg32_multiplayer.c  prg32_performance.c  prg32_platform.c  prg32_qemu_input.c  prg32_setup_store.c  prg32_splash.c  prg32_sprite.c  prg32_store.c  prg32_system.c  prg32_tile.c  prg32_usb_gamepad.c  prg32_wifi.c
components/prg32/assets/: prg32_splash_logo.c
components/prg32/include/: prg32.h  prg32_abi.h  prg32_abi_hash.h  prg32_abi_index.h  prg32_cart_api.h  prg32_metrics.h  prg32_multiplayer.h
docs/: abi.md  api.md  assets.md  audio.md  cartridge-format.md  cartridge_metadata.md  cartridge_store.md  cartridges.md  choosing_boards.md  colophon_abi.md  deployment.md  examples.md  external_controllers.md  framework_manual.md  framework_manual_update_controllers_wifi.md  getting_started_game_development.md  hardware.md  metrics_api.md  publishing_and_flashing_legacy_firmware.md  qemu.md  scientific_measurement_tutorial.md  score_api.md  setup_mode_cartridge_store.md  teaching_with_prg32.md  tutorial.md  tutorial_c_game.md  tutorial_graphic_game.md  unified_tooling.md
hardware/: README.md
main/: CMakeLists.txt  main.c  prg32_config.h  prg32_env_example.h
prg32/: __init__.py  __main__.py  prg32.py
scripts/: ci_smoke_test.sh  load_cart.sh  logging.sh  qemu_build.sh  run_qemu.sh  run_qemu_demo.sh  smoke_test.sh  start.sh
tests/: test_prg32.py  test_prg32_abi_gen.py  test_prg32_cartridge_format.py  test_prg32_game.py  test_prg32_metrics_paper.py  test_prg32_metrics_server.py
tools/: prg32_abi.json  prg32_abi_gen.py  prg32_abi_generated.py  prg32_audio_convert.py  prg32_build_portable_examples.py  prg32_cartridge_format.py  (+7 more)
(+154 files in other folders)
