set(PRG32_DISPLAY_SRC "prg32_display_ili9341.c")
set(PRG32_PRIV_REQUIRES
    driver
    esp_timer
    esp_wifi
    esp_http_server
    esp_http_client
    esp_event
    esp_netif
    nvs_flash
    json
    spi_flash
)

if(IDF_TARGET STREQUAL "esp32c3")
    list(APPEND PRG32_PRIV_REQUIRES esp_lcd esp_lcd_qemu_rgb)
endif()

if(IDF_TARGET STREQUAL "esp32c6")
    list(APPEND PRG32_PRIV_REQUIRES esp_websocket_client mdns)
endif()

if(CONFIG_PRG32_DISPLAY_QEMU_RGB)
    set(PRG32_DISPLAY_SRC "prg32_display_qemu_rgb.c")
endif()

idf_component_register(
    SRCS
        "prg32_abi_exports.c"
        "prg32_audio.c"
        "assets/prg32_splash_logo.c"
        "prg32_bands.c"
        "prg32_cart.c"
        "prg32_console.c"
        "prg32_controller.c"
        "prg32_debug_overlay.c"
        "prg32_diag.c"
        "prg32_http_games.c"
        "prg32_http_scores.c"
        "prg32_gfx_sync.c"
        ${PRG32_DISPLAY_SRC}
        "prg32_input.c"
        "prg32_keyboard.c"
        "prg32_led.c"
        "prg32_metrics.c"
        "prg32_performance.c"
        "prg32_platform.c"
        "prg32_multiplayer.c"
        "prg32_qemu_input.c"
        "prg32_sprite.c"
        "prg32_setup_store.c"
        "prg32_splash.c"
        "prg32_store.c"
        "prg32_system.c"
        "prg32_tile.c"
        "prg32_wifi.c"
    INCLUDE_DIRS "include"
    REQUIRES prg32_audio
    PRIV_INCLUDE_DIRS "../../main"
    PRIV_REQUIRES ${PRG32_PRIV_REQUIRES}
)
